# ramayana-asr

./: CMakeLists.txt  asr-client.py  namah.gram  portaudio_recorder.cpp  portaudio_recorder.cpp.bak  recorded_audio_test.cpp
lm/: ramayana.dic  ramayana.lm  ramayana.log_pronounce  ramayana.sent  ramayana.vocab
